# pdf-converter

./: .gitignore  AGENTS.md  LICENSE  README.md  TASKS.md  convert-folder.sh  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: main.yml
docs/: docling-backend-rationale.md  index.md  modules.md
src/pdf_converter/: converter.py  exceptions.py  extractor.py  summarizer.py
src/pdf_converter/services/: __init__.py  llm_client_factory.py  llm_providers.py  llm_service.py  usage_tracker.py
tests/: test_converter.py  test_extractor.py  test_llm_client_factory.py  test_llm_providers.py  test_llm_service.py  test_summarizer.py  test_usage_tracker.py
